--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "view-design": "^4.5.0",
         "vue-router": "^3.5.1"
     }
 }
